--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="https://flowbite.com/docs/images/logo.svg">
 </head>
-<body>
-  <app-root></app-root>
+<body class="bg-gray-200">
+    <app-root></app-root>
 </body>
 </html>
