--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="https://flowbite.com/docs/images/logo.svg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body class= "overflow-x-hidden font-sans">
+<body class= "overflow-x-hidden bg-gray-50 font-sans">
     <app-root></app-root>
 </body>
 </html>
